<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_popularity">Most Popular</string>
    <string name="sort_rating">Highest Rated</string>
    <string name="sort_favorite">Favorites</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="plot_synopsis">Plot synopsis</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="action_sort_by_popularity">Most Popular</string>
    <string name="action_sort_by_rating">Highest Rated</string>
    <string name="action_share">Share</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="content_authority">com.example.prashanth.popularmovies.movies</string>


    <string name="action_favorite">Favorite</string>

</resources>
