<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity
    ">

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_by_popularity"
                android:title="@string/sort_popularity"
                />
            <item
                android:id="@+id/action_sort_by_rating"
                android:title="@string/sort_rating"
                />

            <item android:id="@+id/action_sort_by_favorite"
                android:title="@string/sort_favorite" />
        </menu>

    </item>

</menu>
