<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:id="@+id/detail_layout">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_item_movie_height">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_alignParentBottom="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white"
                    android:background="#80000000" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffffff"
            card_view:cardCornerRadius="4dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardElevation="8dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plot_synopsis"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="@dimen/body_text_line_spacing"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    />
                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold"
                        android:text="@string/release_date"
                        android:textSize="@dimen/text_size" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"  />

                    <TextView
                        android:id="@+id/detail_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"  />

                    <TextView
                        android:id="@+id/detail_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size" />






                </LinearLayout>



            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/detail_trailers_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp"
            android:layout_margin="5dp"
            android:layout_marginTop="30dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/trailers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="20dp">

                    <com.linearlistview.LinearListView
                        android:id="@+id/detail_trailers"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:divider="?android:dividerHorizontal"
                        android:showDividers="middle" />

                </HorizontalScrollView>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/detail_reviews_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="4dp"
            android:layout_margin="5dp"
            card_view:cardElevation="8dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/reviews"
                    android:textStyle="bold" />

                <com.linearlistview.LinearListView
                    android:id="@+id/detail_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:divider="?android:dividerHorizontal"
                    android:showDividers="middle" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>
</FrameLayout>
